# sudoku-solver

./: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  tarpaulin-report.html
src/: input.rs  lib.rs  main.rs  math_helpers.rs  possible.rs  solved_detection.rs  solving.rs  unsolvable_detection.rs  validity.rs
src/tests/: input.rs  math_helpers.rs  mod.rs  possible.rs  solved_detection.rs  solving.rs  unsolvable_detection.rs  validity.rs
test_grids/: easyToSolve.txt  easyToSolve2.txt  easyToSolveSolved.txt  extremeToSolve.txt  extremeToSolve2.txt  extremeToSolve2Solved.txt  extremeToSolveSolved.txt  fullGrid.txt  fullInvalidGrid.txt  hardToSolve.txt  hardToSolveSolved.txt  invalidChars.txt  invalidLineLength.txt
web/: index.html  script.js  styles.css
