[package]
name = "sudoku-solver"
version = "0.1.0"
authors = ["Jesse Conner <me@jesseconner.ca>"]
description = "A WASM Sudoku Solver"
license = "MIT"
edition = "2021"
repository = "git@github.com:mirite/sudoku-solver.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"

[scripts]
build-wasm = "wasm-pack build --target web --out-name wasm --out-dir ./web/pkg"
